# julia_set

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: helper.ts  index.ts
js/julia/: colors.ts  index.ts  logic.ts
setup/: docker-dev-build.sh  docker-dev-run.sh  docker-prod-build.sh  docker-prod-run.sh
src/: julia.rs  lib.rs
src/julia/: colors.rs
static/: index.html
